--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="line">
+		<div id="bold"></div>
+		<button id="btn"></button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
